View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023678 | Open CASCADE | OCCT:Modeling Algorithms | public | 2012-12-28 18:09 | 2013-04-29 15:21 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2008 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023678: Compiler warning in BRepFill_Pipe::ShareFaces() | ||||
Description | The method BRepFill_Pipe::ShareFaces() added in #23606 contains dirty code for which compiler (MSVC 9) reports three warnings: 34>..\..\..\src\BRepFill\BRepFill_Pipe.cxx(808) : warning C4553: '==' : operator has no effect; did you intend '='? 34>..\..\..\src\BRepFill\BRepFill_Pipe.cxx(852) : warning C4553: '==' : operator has no effect; did you intend '='? 34>..\..\..\src\BRepFill\BRepFill_Pipe.cxx(846) : warning C4101: 'indV' : unreferenced local variable | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
has duplicate | 0023685 | closed | Community | Comparision operator (==) instead of assignment (=) used |
|
Correction pushed to branch CR23678; please review |
|
Just one remark: Line 847: Standard_Integer je = (i == 1 ? myEdges->RowLength()); should be replaced by: Standard_Integer je = (i == 1 ? 1 : myEdges->RowLength()); Please fix it. |
|
Error corrected |
|
No remarks. |
|
Dear BugMaster, Branch CR23678 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: Not needed |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-12-28 18:09 |
|
New Issue | |
2012-12-28 18:09 |
|
Assigned To | => jgv |
2012-12-28 18:13 |
|
Note Added: 0022885 | |
2012-12-28 18:13 |
|
Assigned To | jgv => skv |
2012-12-28 18:13 |
|
Status | new => resolved |
2012-12-29 12:06 |
|
Note Added: 0022887 | |
2012-12-29 12:06 |
|
Assigned To | skv => abv |
2012-12-29 12:06 |
|
Status | resolved => assigned |
2012-12-29 12:19 |
|
Note Added: 0022888 | |
2012-12-29 12:19 |
|
Assigned To | abv => skv |
2012-12-29 12:19 |
|
Status | assigned => resolved |
2012-12-29 12:46 |
|
Note Added: 0022890 | |
2012-12-29 12:46 |
|
Assigned To | skv => mkv |
2012-12-29 12:46 |
|
Status | resolved => reviewed |
2013-01-04 17:09 |
|
Relationship added | has duplicate 0023685 |
2013-01-15 17:41 |
|
Note Added: 0022969 | |
2013-01-15 17:41 |
|
Test case number | => Not needed |
2013-01-15 17:41 |
|
Assigned To | mkv => bugmaster |
2013-01-15 17:41 |
|
Status | reviewed => tested |
2013-01-21 18:29 |
|
Changeset attached | => occt master 7566ccf3 |
2013-01-21 18:29 |
|
Assigned To | bugmaster => abv |
2013-01-21 18:29 |
|
Status | tested => verified |
2013-01-21 18:29 |
|
Resolution | open => fixed |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |