0023678: Compiler warning in BRepFill_Pipe::ShareFaces()